--- a/MvcGraduate/MvcGraduate/Views/Interaction/GetArticle.cshtml
+++ b/MvcGraduate/MvcGraduate/Views/Interaction/GetArticle.cshtml
@@ -45,7 +45,7 @@
                                     sharesName = sharesName.Substring(0, sharesName.Length - 1);
                                 }
                                 <tr>
-                                    <td><input type="checkbox" value="checkbox" /></td>
+                                    <td><input type="checkbox" value="@item.ID" /></td>
                                     <td>@item.Title</td>
                                     <td>@item.Students.Name</td>
                                     <td>@item.Time</td>
@@ -56,7 +56,7 @@
                                             <a href="javascript:;" onclick="window.open('@Url.Action("Details_Article", "Interaction", new { id = item.ID })', '', 'height=500,width=820,status=1,toolbar=no,menubar=no,location=no,scrollbars=yes,left=200,top=100,resizable=yes');">详情</a>
                                             <a href="@Url.Action("Edit_Article", "Interaction", new { id = @item.ID })">修改</a>
                                             <a href="javascript:;" onclick="window.open('@Url.Action("Details_HomeWork", "Study",new {id= item.ID})', '', 'height=500,width=820,status=1,toolbar=no,menubar=no,location=no,scrollbars=yes,left=200,top=100,resizable=yes');">分享</a>
-                                            <a href="javascript:;" onclick="Delete_This(@item.ID)">删除</a>
+                                            <a href="javascript:;" onclick="Delete_This(this,@item.ID)">删除</a>
                                         </p>
                                         <p>
                                             <a href="javascript:;" onclick="GetArticle_Comments(@item.ID)">管理评论</a>
@@ -67,8 +67,8 @@
                         }
                         <tr>
                             <td colspan="8" style="text-align:left;">
-                                <input type="checkbox" onclick="Check_all(this);"><label>全选</label>&nbsp;
-                                <a href="javascript:;" onclick="Delete_Checked()" title="删除所选照片评论">
+                                <input type="checkbox" onclick="Check_all(this);" value=""><label>全选</label>&nbsp;
+                                <a href="javascript:;" onclick="Delete_Checked()">
                                     <img src="~/Images/delete.gif" style="vertical-align:middle">删除
                                 </a>&nbsp;
                             </td>
@@ -88,24 +88,30 @@
         else
             $("table :checkbox").attr("checked", false);
     }
-    function Delete_This(id) {
-        Del_Fun(id);
-    }
-    function Delete_Checked() {
-        var ids = "";
-        $("table :checkbox:checked").each(function (index) {
-            ids += $(this).val() + ",";
-        })
-        Del_Fun(ids);
-    }
-    function Del_Fun(id){
+    function Delete_This(org,id) {
         $.messager.confirm('警告', '你确定要删除吗?', function (r) {
             if (r) {
                 $.post(
                     "@Url.Action("DelArticle", "Interaction")",
                     { "ids": id },
                     function () {
-                        location.reload();
+                        $(org).parent().parent().parent().remove();
+                    });
+            }
+        });
+    }
+    function Delete_Checked() {
+        var ids = "";
+        $("table :checkbox:checked").each(function (index) {
+            ids += $(this).val() + ",";
+        });
+        $.messager.confirm('警告', '你确定要删除选中的吗?', function (r) {
+            if (r) {
+                $.post(
+                    "@Url.Action("DelArticle", "Interaction")",
+                    { "ids": ids },
+                    function () {
+                        $("table :checkbox:checked").remove();
                     });
             }
         });
