--- a/MvcGraduate/MvcGraduate/Views/Study/Index.cshtml
+++ b/MvcGraduate/MvcGraduate/Views/Study/Index.cshtml
@@ -35,29 +35,32 @@
     </script>
 }
 <div id="zhuye">
-        <div class="common_top">
-            <ul>
-                <li><img src="~/Images/sys_message_ico.png" /></li>
-                <li class="no_news"><a href="#">无信息</a></li>
-                <li><img src="~/Images/sys_message_ico.png" /></li>
-                <li class="no_news"><a href="#">无信息</a></li>
-                <li><img src="~/Images/sys_message_ico.png" /></li>
-                <li class="no_news"><a href="#">无信息</a></li>
-                <li class="gengduo"><a href="#">更多>></a></li>
-            </ul>
-        </div>
-        <div class="navigation_centre">
-            <div class="navigation_centre_left">
-                <div class="navigation_menu_bg" onclick="GetHomeWork()">家庭作业</div>
-                <div onclick="GetTimeTable()">我的课程</div>
-                <div onclick="GetMyVacation()">我的请假</div>
-                <div>成绩查询</div>
-                <div>学分查询</div>
-                <div>奖惩信息</div>
-            </div>
-            <div class="navigation_centre_right" id="Js_Study_RightBigDiv">
+    <div class="common_top">
+        <ul>
+            <li><img src="~/Images/sys_message_ico.png" /></li>
+            <li class="no_news"><a href="#">无信息</a></li>
+            <li><img src="~/Images/sys_message_ico.png" /></li>
+            <li class="no_news"><a href="#">无信息</a></li>
+            <li><img src="~/Images/sys_message_ico.png" /></li>
+            <li class="no_news"><a href="#">无信息</a></li>
+            <li class="gengduo"><a href="#">更多>></a></li>
+        </ul>
+    </div>
+    <div id="Js_StudentInfo" style="opacity:0">
 
-            </div>
+    </div>
+    <div class="navigation_centre">
+        <div class="navigation_centre_left">
+            <div class="navigation_menu_bg" onclick="GetHomeWork()">家庭作业</div>
+            <div onclick="GetTimeTable()">我的课程</div>
+            <div onclick="GetMyVacation()">我的请假</div>
+            <div>成绩查询</div>
+            <div>学分查询</div>
+            <div>奖惩信息</div>
         </div>
+        <div class="navigation_centre_right" id="Js_Study_RightBigDiv">
+
+        </div>
+    </div>
 </div>
 
