--- a/MvcGraduate/MvcGraduate/Views/Home/Index.cshtml
+++ b/MvcGraduate/MvcGraduate/Views/Home/Index.cshtml
@@ -7,42 +7,24 @@
 
 @section Scripts {
     <script>
-        function RedirectToInteraction() {
-            location.href = "@Url.Action("Index", "Interaction", new { RedirectStr = "RedirectToArticle" })";
-        }
-        function RedirectToQuestion() {
-            location.href = "@Url.Action("Index", "Interaction", new { RedirectStr = "RedirectToQuestion" })";
-        }
-        function RedirectToImage() {
-            location.href = "@Url.Action("Index", "Interaction")";
-        }
-        function RedirectToNotifyNews() {
-            location.href = "@Url.Action("Index", "NotifyNews")";
-        }
-        function RedirectToStudy() {
-            location.href = "@Url.Action("Index", "Study")";
-        }
-        function RedirectToMaterial() {
-            location.href = "@Url.Action("Index", "Grade", new {RedirectStr="RedirectToMaterial" })";
-        }
         function SubmitQuestion() {
             $.post(
                 "@Url.Action("SubmitQuestion", "Home")",
-                { "info": $('#zhuye_TiWenKuang').val() },
-                function (data) {
-                    if (data == "True")
-                        alert("保存成功");
-                    else
-                        alert("保存失败");
-                });
+                    { "info": $('#zhuye_TiWenKuang').val() },
+                    function (data) {
+                        if (data == "True")
+                            alert("保存成功");
+                        else
+                            alert("保存失败");
+                    });
         }
         $('.title_navigate a:eq(0) div').addClass('logo_left_title_select');
         //填充分享的文章
         $.post(
             "@Url.Action("GetMyArt", "Home")",
-            function (data) {
-                $('#JS_myArtDiv').html(data);
-            });
+        function (data) {
+            $('#JS_myArtDiv').html(data);
+        });
         //课程表
         $.post(
             "@Url.Action("GetSchedule", "Home")",
@@ -104,63 +86,66 @@
             <li class="gengduo"><a href="#">更多>></a></li>
         </ul>
     </div>
+    <div id="Js_StudentInfo" style="opacity:0">
+
+    </div>
     <div class="zhuye_centre">
         <div class="zhuye_centre_left">
             <div class="zhuye_centre_left_1">
                 <div class="wenzhang">
-                    <a href="#" onclick="RedirectToInteraction()"><img src="~/Images/article.png" id="article" /></a>
+                    <a href="@Url.Action("Index", "Interaction", new { RedirectStr = "RedirectToArticle" })"><img src="~/Images/article.png" id="article" /></a>
                     <ul>
-                        <li><a href="#" onclick="RedirectToInteraction()">我的文章</a></li>
-                        <li class="number"><a href="#" onclick="RedirectToInteraction()">@ViewBag.AricleCount </a></li>
+                        <li><a href="@Url.Action("Index", "Interaction", new { RedirectStr = "RedirectToArticle" })">我的文章</a></li>
+                        <li class="number"><a href="@Url.Action("Index", "Interaction", new { RedirectStr = "RedirectToArticle" })">@ViewBag.AricleCount </a></li>
                     </ul>
                 </div>
                 <div class="zhaopian">
-                    <a href="#" onclick="RedirectToImage()"><img src="~/Images/my_photo.png" id="article" /></a>
+                    <a href="@Url.Action("Index", "Interaction")"><img src="~/Images/my_photo.png" id="article" /></a>
                     <ul>
-                        <li><a href="#" onclick="RedirectToImage()">我的照片</a></li>
-                        <li class="number"><a href="#" onclick="RedirectToImage()">@ViewBag.ImageCount</a></li>
+                        <li><a href="@Url.Action("Index", "Interaction")">我的照片</a></li>
+                        <li class="number"><a href="@Url.Action("Index", "Interaction")">@ViewBag.ImageCount</a></li>
                     </ul>
                 </div>
                 <div class="xiaoxi">
-                    <a href="#" onclick="RedirectToNotifyNews()"><img src="~/Images/message.png" id="article" /></a>
+                    <a href="@Url.Action("Index", "NotifyNews")"><img src="~/Images/message.png" id="article" /></a>
                     <ul>
-                        <li><a href="#" onclick="RedirectToNotifyNews()">消息</a></li>
-                        <li class="number"><a href="#" onclick="RedirectToNotifyNews()">@ViewBag.NotifyCount</a></li>
+                        <li><a href="@Url.Action("Index", "NotifyNews")">消息</a></li>
+                        <li class="number"><a href="@Url.Action("Index", "NotifyNews")">@ViewBag.NotifyCount</a></li>
                     </ul>
                     <div id="JS_NotifyDiv"></div>
                 </div>
                 <div class="tiwen">
-                    <a href="#" onclick="RedirectToQuestion()"><img src="~/Images/ask.png" id="article" /></a>
+                    <a href="@Url.Action("Index", "Interaction", new { RedirectStr = "RedirectToQuestion" })"><img src="~/Images/ask.png" id="article" /></a>
                     <ul>
-                        <li><a href="#" onclick="RedirectToQuestion()">提问</a></li>
-                        <li class="number"><a href="#" onclick="RedirectToQuestion()">@ViewBag.QuestionCount</a></li>
+                        <li><a href="@Url.Action("Index", "Interaction", new { RedirectStr = "RedirectToQuestion" })">提问</a></li>
+                        <li class="number"><a href="@Url.Action("Index", "Interaction", new { RedirectStr = "RedirectToQuestion" })">@ViewBag.QuestionCount</a></li>
                     </ul>
                 </div>
                 <div class="zuoye">
-                    <a href="#" onclick="RedirectToStudy()"><img src="~/Images/homework.png" id="article" /></a>
+                    <a href="@Url.Action("Index", "Study")"><img src="~/Images/homework.png" id="article" /></a>
                     <ul>
-                        <li><a href="#" onclick="RedirectToStudy()">电子作业</a></li>
-                        <li class="number"><a href="#" onclick="RedirectToStudy()">@ViewBag.HomeWorkCount</a></li>
+                        <li><a href="@Url.Action("Index", "Study")">电子作业</a></li>
+                        <li class="number"><a href="@Url.Action("Index", "Study")">@ViewBag.HomeWorkCount</a></li>
                     </ul>
                 </div>
                 <div class="ziliao">
-                    <a href="#" onclick="RedirectToMaterial()"><img src="~/Images/kc_ziliao.png" id="article" /></a>
+                    <a href="@Url.Action("Index", "Grade", new {RedirectStr="RedirectToMaterial" })"><img src="~/Images/kc_ziliao.png" id="article" /></a>
                     <ul>
-                        <li><a href="#" onclick="RedirectToMaterial()">课程资料</a></li>
-                        <li class="number"><a href="#" onclick="RedirectToMaterial()">@ViewBag.MaterialCount</a></li>
+                        <li><a href="@Url.Action("Index", "Grade", new {RedirectStr="RedirectToMaterial" })">课程资料</a></li>
+                        <li class="number"><a href="@Url.Action("Index", "Grade", new {RedirectStr="RedirectToMaterial" })">@ViewBag.MaterialCount</a></li>
                     </ul>
                 </div>
             </div>
             <div class="zhuye_centre_left_2">
                 <img src="~/Images/gonggao.png" width="148" height="37" id="menu_bg" />
                 <ul>
-                    <li><a href="#">更多>></a></li>
+                    <li><a href="@Url.Action("Index", "NotifyNews")">更多>></a></li>
                 </ul>
             </div>
             <div class="zhuye_centre_left_3">
                 <img src="~/Images/xiaoxi.png" width="154" height="49" id="menu_bg" />
                 <ul>
-                    <li><a href="#">更多>></a></li>
+                    <li><a href="@Url.Action("Index", "NotifyNews")">更多>></a></li>
                 </ul>
             </div>
             <div class="zhuye_centre_left_4">
@@ -172,9 +157,9 @@
             <div id="zhuye_centre_centre_1">
                 <ul class="title">
                     <li><img src="~/Images/title_bg1.png" /></li>
-                    <li class="current"><a href="#">我的文章</a></li>
+                    <li class="current"><a href="@Url.Action("Index", "Interaction", new { RedirectStr = "RedirectToArticle" })">我的文章</a></li>
                     <li><img src="~/Images/title_bg1.png" /></li>
-                    <li class="current"><a href="#">分享文章</a></li>
+                    <li class="current"><a href="@Url.Action("Index", "Interaction", new { RedirectStr = "RedirectToShareArticle" })">分享文章</a></li>
                 </ul>
                 <div id="JS_myArtDiv"></div>
                 <div id="JS_ShareArtDiv" style="display:none"></div>
@@ -183,9 +168,9 @@
             <div id="zhuye_centre_centre_2">
                 <ul class="title">
                     <li><img src="~/Images/title_bg1.png" /></li>
-                    <li class="current"><a href="#">我的照片</a></li>
+                    <li class="current"><a href="@Url.Action("Index", "Interaction", new { RedirectStr = "RedirectToImage" })">我的照片</a></li>
                     <li><img src="~/Images/title_bg1.png" /></li>
-                    <li class="current"><a href="#">分享照片</a></li>
+                    <li class="current"><a href="@Url.Action("Index", "Interaction", new { RedirectStr = "RedirectToShareImage" })">分享照片</a></li>
                 </ul>
                 <div id="JS_MyImageDiv"></div>
                 <div id="JS_ShareImageDiv" style="display:none"></div>
@@ -201,7 +186,7 @@
                 <div style="width:100%;height:80px">
                     <img src="~/Images/teacher.png" width="155" height="46" id="menu_bg" />
                     <ul>
-                        <li><a href="#">更多>></a></li>
+                        <li><a href="@Url.Action("Index", "Grade", new { RedirectStr = "RedirectToTeacher" })">更多>></a></li>
                     </ul>
                 </div>
                 <div id="JS_TeacherHomeDiv"></div>
@@ -211,7 +196,7 @@
                 <div style="width:100%;height:80px">
                     <img src="~/Images/banwei.png" width="152" height="49" id="menu_bg" />
                     <ul>
-                        <li><a href="#">更多>></a></li>
+                        <li><a href="@Url.Action("Index","Grade")">更多>></a></li>
                     </ul>
                 </div>
                 <div id="JS_BanWeiHomeDiv"></div>
