--- a/MvcGraduate/MvcGraduate/Views/NotifyNews/Index.cshtml
+++ b/MvcGraduate/MvcGraduate/Views/NotifyNews/Index.cshtml
@@ -41,6 +41,9 @@
             <li class="gengduo"><a href="#">更多>></a></li>
         </ul>
     </div>
+    <div id="Js_StudentInfo" style="opacity:0">
+
+    </div>
     <div class="navigation_centre">
         <div class="navigation_centre_left">
             <div onclick="GetAllNotify()" class="navigation_menu_bg">活动通知</div>
