--- a/MvcGraduate/MvcGraduate/Views/Home/GetShareArt.cshtml
+++ b/MvcGraduate/MvcGraduate/Views/Home/GetShareArt.cshtml
@@ -16,7 +16,7 @@
                 <div class="line2">@Html.DisplayFor(modelItem => item.Contents)</div>
                 <div class="line3">
                     <span>
-                        <a href="javascript:void();" onclick=" window.open('myxxdt/wzgl_detail.php?id=48', '', 'height=500,width=820,status=1,toolbar=no,menubar=no,location=no,scrollbars=yes,left=200,top=100,resizable=yes'); " data-article-id="48">查看详细</a>|
+                        <a href="javascript:void();" onclick="window.open('@Url.Action("Details_Article", "Interaction", new { id = item.ID })', '' , 'height=500,width=820,status=1,toolbar=no,menubar=no,location=no,scrollbars=yes,left=200,top=100,resizable=yes' ); " data-article-id=" 48">查看详细</a>|
                         <a href="javascript:void();">评论</a>|
                         <a href="javascript:void();">分享</a>
                     </span>
