登陆和注册界面样式都OK，注册还没有添加后台功能

--- a/MvcGraduate/MvcGraduate/Content/Login/css/style.css
+++ b/MvcGraduate/MvcGraduate/Content/Login/css/style.css
@@ -110,7 +110,7 @@ p {
   font-size: 18px;
   font-weight: 700;
   line-height: 1;
-  color: #fff;
+  color: #000;
   text-decoration: none;
   -webkit-transition: all 0.4s;
      -moz-transition: all 0.4s;
