--- a/MvcGraduate/MvcGraduate/Views/Account/Index.cshtml
+++ b/MvcGraduate/MvcGraduate/Views/Account/Index.cshtml
@@ -4,10 +4,9 @@
 <html lang="en" class="no-js">
 <head>
     <meta charset="UTF-8" />
-    <title>Particleground demo</title>
+    <title>登陆界面</title>
     <link rel="stylesheet" href="~/Content/Login/css/style.css" />
     <script type="text/javascript" src="~/Content/Login/Js/jquery-1.11.1.min.js"></script>
-    @*<script src="~/Scripts/jquery-1.8.2.min.js"></script>*@
     <script type="text/javascript" src="~/Content/Login/Js/jquery.particleground.min.js"></script>
     <script type="text/javascript" src="~/Content/Login/Js/demo.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
@@ -29,7 +28,7 @@
             height: 40px;
             background: url(../../Images/login_pwd.png) no-repeat;
             padding-left: 35px;
-            color: #000;
+            color: #000 !important;
             background-color: #FFF;
         }
 
@@ -38,15 +37,15 @@
             height: 40px;
             background: url('../../Images/login_name.png') no-repeat;
             padding-left: 35px;
-            color: #000;
+            color: #000 !important;
             background-color: #FFF;
         }
     </style>
 </head>
 
 <body>
-    <div id="particles">
-        <div class="intro">
+    <div align="center" id="particles">
+        <div class="intro" style="padding:0px;">
             <div style="Opacity:0.65;height: 280px;width: 100%;background-color:#000;line-height:300px;">
                 <form action="@Url.Action("ValidateCount", "Account")" method="post">
                     @Html.AntiForgeryToken()
@@ -57,13 +56,13 @@
                         </tr>
                         <tr>
                             <td align="right" style="color:#fff;">用户名：</td>
-                            <td>@Html.TextBoxFor(model => model.LoginID, new { @placeholder = "请输入账户...", required = "required", @class = "input_LoginID" })</td>
-                            <td align="left" style="color:red;padding-left:4px">@Html.ValidationMessageFor(item => item.LoginID)</td>
+                            <td>@Html.TextBoxFor(model => model.LoginID, new { @placeholder = "请输入账户...",autocomplete="on", required = "required", @class = "input_LoginID" })</td>
+                            <td align="left" style="color:#98ff72;padding-left:4px">@Html.ValidationMessageFor(item => item.LoginID)</td>
                         </tr>
                         <tr>
                             <td align="right" style="color:#fff;">密 码：</td>
-                            <td>@Html.TextBoxFor(model => model.Pwd, new { @placeholder = "请输入密码...", required = "required", @class = "Input_pwd" })</td>
-                            <td align="left" style="color:red;padding-left:4px"> @Html.ValidationMessageFor(item => item.Pwd)</td>
+                            <td>@Html.TextBoxFor(model => model.Pwd, new { @placeholder = "请输入密码...", type = "Password", required = "required", @class = "Input_pwd" })</td>
+                            <td align="left" style="color:#98ff72;padding-left:4px"> @Html.ValidationMessageFor(item => item.Pwd)</td>
                         </tr>
                         <tr>
                             <td></td>
