--- a/MvcGraduate/MvcGraduate/Views/Account/Register.cshtml
+++ b/MvcGraduate/MvcGraduate/Views/Account/Register.cshtml
@@ -1,12 +1,10 @@
-﻿
-<!doctype html>
+﻿<!doctype html>
 <html lang="en" class="no-js">
 <head>
     <meta charset="UTF-8" />
-    <title>Particleground demo</title>
+    <title>登陆界面</title>
     <link rel="stylesheet" href="~/Content/Login/css/style.css" />
     <script type="text/javascript" src="~/Content/Login/Js/jquery-1.11.1.min.js"></script>
-    @*<script src="~/Scripts/jquery-1.8.2.min.js"></script>*@
     <script type="text/javascript" src="~/Content/Login/Js/jquery.particleground.min.js"></script>
     <script type="text/javascript" src="~/Content/Login/Js/demo.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
@@ -23,56 +21,46 @@
                 line-height: 38px;
             }
 
-        .Input_pwd {
-            width: 100%;
-            height: 40px;
-            background: url(../../Images/login_pwd.png) no-repeat;
-            padding-left: 35px;
-            color: #000;
-            background-color: #FFF;
+        .Input_Register {
+            width: 100%;height: 40px;padding-left: 35px;color:#000; background-color:#FFF;
         }
+        .Input_Register{
 
-        .input_LoginID {
-            width: 100%;
-            height: 40px;
-            background: url('../../Images/login_name.png') no-repeat;
-            padding-left: 35px;
-            color: #000;
-            background-color: #FFF;
         }
-
     </style>
 </head>
 
 <body>
-    <div id="particles">
-        <div class="intro">
-            <div style="Opacity:0.65;height: 280px;width: 100%;background-color:#000;line-height:300px;">
-                <form action="@Url.Action("ValidateCount", "Account")" method="post">
-                    @Html.AntiForgeryToken()
-                    @Html.ValidationSummary(true)
+    <div align="center" id="particles">
+        <div class="intro" style="padding:0px;">
+            <div style="Opacity:0.65;height: 390px;width: 100%;background-color:#000;">
+                <form>
                     <table>
                         <tr>
                             <td></td>
                         </tr>
                         <tr>
-                            <td align="right" style="color:#fff;">用户名：</td>
-                            <td><input placeholder="请输入账户..." name="account" required="required" /></td>
-                            <td align="left" style="color:red;padding-left:4px"></td>
-                        </tr>
-                        <tr>
-                            <td align="right" style="color:#fff;">密 码：</td>
-                            <td><input placeholder="请输入密码..." name="account" required="required" /></td>
-                            <td align="left" style="color:red;padding-left:4px"> @Html.ValidationMessageFor(item => item.Pwd)</td>
-                        </tr>
-                        <tr>
+                            <td align="right" style="color:#fff;">邮箱注册：</td>
+                            <td><input class="Input_Register" style="background: url('Images/email.png') no-repeat;" placeholder="请输入邮箱..." /></td>
                             <td></td>
                         </tr>
                         <tr>
-                            <td colspan="2" align="right">
-                                <input type="submit" value="登 录" class="btn" />&nbsp;&nbsp;&nbsp;&nbsp;
-                                <input type="submit" value="立即注册" class="btn" />
-                            </td>
+                            <td align="right" style="color:#fff;">用户名：</td>
+                            <td><input class="Input_Register" style="background: url('Images/name.png') no-repeat" placeholder="请输入账户..." /></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td align="right" style="color:#fff;">密 码：</td>
+                            <td><input class="Input_Register" style="background: url('Images/pwd.png') no-repeat;" placeholder="请输入密码..." /></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td align="right" style="color:#fff;">确认密码：</td>
+                            <td><input class="Input_Register" style="background: url('Images/pwd.png') no-repeat;" placeholder="请再次输入密码..." /></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td colspan="3"><input type="submit" value="立即注册" class="btn" /></td>
                         </tr>
                     </table>
                 </form>
